tests/files/lexer_tests/should_fail/101.cmdr
//Should not parse due to missing rparen
while (true echo hi;